--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv-cli": "^7.4.2",
     "typescript": "^5.5.4",
     "typescript-node": "^0.1.3"
   },
   "dependencies": {
-    "@langchain/core": "^0.2.18"
+    "@langchain/core": "^0.2.18",
+    "dotenv": "^16.4.5"
   }
 }
