--- a/packages/llm/package.json
+++ b/packages/llm/package.json
@@ -2,7 +2,8 @@
   "name": "@acai/llm",
   "version": "0.0.0",
   "description": "",
-  "main": "lib/index.js",
+  "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
