--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@changesets/cli": "^2.27.7",
     "dotenv-cli": "^7.4.2",
-    "typescript": "^5.5.4",
-    "typescript-node": "^0.1.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
   "dependencies": {
     "@langchain/core": "^0.2.18",
