--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ci:publish": "pnpm publish -r",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
