--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -31,7 +31,14 @@ jobs:
           version: pnpm ci:version
           commit: "chore: update versions"
           title: "chore: update versions"
-          publish: pnpm ci:publish
+          publish: pnpm ci:publish --no-git-checks
+      - name: Debug NPM_TOKEN
+        run: |
+          if [ -n "$NPM_TOKEN" ]; then
+            echo "NPM_TOKEN is set"
+          else
+            echo "NPM_TOKEN is not set"
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
