--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,12 +1,19 @@
 {
   "name": "@artificialcitizens/ava",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "shx rm -rf dist && tsc -b",
+    "lint": "eslint . --ext .ts",
+    "postpack": "shx rm -f oclif.manifest.json",
+    "posttest": "pnpm run lint",
+    "prepack": "oclif manifest && oclif readme",
+    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "version": "oclif readme && git add README.md"
   },
+  "types": "dist/index.d.ts",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -34,7 +41,8 @@
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/node": "^18",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "shx": "^0.3.3"
   },
   "peerDependencies": {
     "@langchain/core": "^0.2.18"
