--- a/packages/llm/package.json
+++ b/packages/llm/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@artificialcitizens/llm",
+  "name": "@ai-citizens/llm",
   "version": "0.0.1",
   "description": "",
   "type": "module",
