--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "build": "pnpm -r run build",
+    "ci:publish": "pnpm publish -r --filter \"@ai-citizens/*\" --no-git-checks",
     "publish": "pnpm publish -r --filter \"@ai-citizens/*\" --no-git-checks",
     "changeset": "changeset",
     "version-packages": "changeset version",
