--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -18,17 +18,13 @@ jobs:
       - name: setup node.js
         uses: actions/setup-node@v3
         with:
-          registry-url: "https://npm.pkg.github.com"
-          node-version: 20
+          node-version: 18
       - name: install pnpm
         run: npm i pnpm@latest -g
-      - name: Install oclif globally
+      - name: install oclif
         run: npm install -g oclif
       - name: Setup npmrc
-        run: |
-          echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
-          echo "registry=https://registry.npmjs.org/" >> .npmrc
-          echo "always-auth=true" >> .npmrc
+        run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > .npmrc
       - name: setup pnpm config
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: install dependencies
@@ -36,10 +32,9 @@ jobs:
       - name: create and publish versions
         uses: changesets/action@v1
         with:
-          version: pnpm changeset version
+          version: pnpm ci:version
           commit: "chore: update versions"
           title: "chore: update versions"
           publish: pnpm ci:publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
