--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "pnpm -r run build",
     "ci:publish": "pnpm publish --access public -r --filter \"@ai-citizens/*\" --no-git-checks",
+    "ci:version": "changeset version",
     "publish": "pnpm publish -r --filter \"@ai-citizens/*\" --no-git-checks",
     "changeset": "changeset",
     "version-packages": "changeset version",
