--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,1 @@
-//registry.npmjs.org/:_authToken=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
+//registry.npmjs.org/:_authToken=${process.env.NPM_TOKEN}
