--- a/.github/workflows/changeset.yml
+++ b/.github/workflows/changeset.yml
@@ -29,6 +29,8 @@ jobs:
         run: pnpm config set store-dir $PNPM_CACHE_FOLDER
       - name: install dependencies
         run: pnpm install
+      - name: build project
+        run: pnpm run build
       - name: create and publish versions
         uses: changesets/action@v1
         with:
