--- a/ava.config.json
+++ b/ava.config.json
@@ -1,28 +1,56 @@
 {
   "modelConfig": {
-    "anthropic": [
-      "claude-3-5-sonnet-20240620",
-      "claude-3-haiku-20240307",
-      "claude-3-opus-20240229",
-      "claude-3-sonnet-20240229"
-    ],
-    "google": ["gemini-1.0-pro", "gemini-1.5-flash", "gemini-1.5-pro"],
-    "groq": [
-      "gemma-7b-it",
-      "gemma2-9b-it",
-      "llama-3.1-8b-instant",
-      "llama-3.1-70b-versatile",
-      "mixtral-8x7b-32768"
-    ],
-    "local": ["hermes-2-pro-llama-3-8b"],
-    "ollama": ["llama3.1"],
-    "openAI": [
-      "gpt-3.5-turbo",
-      "gpt-4",
-      "gpt-4-0125-preview",
-      "gpt-4-turbo",
-      "gpt-4o",
-      "gpt-4o-mini"
-    ]
+    "anthropic": {
+      "defaultModel": "claude-3-5-sonnet-20240620",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": [
+        "claude-3-5-sonnet-20240620",
+        "claude-3-haiku-20240307",
+        "claude-3-opus-20240229",
+        "claude-3-sonnet-20240229"
+      ]
+    },
+    "google": {
+      "defaultModel": "gemini-1.5-pro",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": ["gemini-1.0-pro", "gemini-1.5-flash", "gemini-1.5-pro"]
+    },
+    "openAI": {
+      "defaultModel": "gpt-4o",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": [
+        "gpt-3.5-turbo",
+        "gpt-4",
+        "gpt-4-0125-preview",
+        "gpt-4-turbo",
+        "gpt-4o",
+        "gpt-4o-mini"
+      ]
+    },
+    "groq": {
+      "defaultModel": "llama-3.1-8b-instant",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": [
+        "llama-3.1-8b-instant",
+        "llama-3.1-70b-versatile",
+        "mixtral-8x7b-32768"
+      ]
+    },
+    "ollama": {
+      "defaultModel": "llama3.1",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": ["llama3.1"]
+    },
+    "local": {
+      "defaultModel": "hermes-2-pro-llama-3-8b",
+      "temperature": 0.5,
+      "maxTokens": 8192,
+      "models": ["hermes-2-pro-llama-3-8b"]
+    }
   }
 }
