--- a/packages/graph/tsconfig.json
+++ b/packages/graph/tsconfig.json
@@ -2,18 +2,18 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "NodeNext",
     "declaration": true,
     "esModuleInterop": true,
     "outDir": "./dist/esm",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@ai-citizens/*": ["../*"]
     }
   },
   "include": ["src/**/*"],
