--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ai-citizens/graph",
+  "name": "@ai-citizens/tools",
   "version": "0.0.0",
   "description": "",
   "type": "module",
@@ -13,18 +13,23 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ai-citizens/llm": "workspace:*"
+    "@ai-citizens/llm": "workspace:*",
+    "@ai-citizens/prompts": "workspace:*",
+    "@ai-citizens/utils": "workspace:*",
+    "@langchain/community": "^0.2.22",
+    "@langchain/core": "^0.2.18",
+    "youtube-transcript": "^1.2.1",
+    "youtubei.js": "^10.0.0"
   },
   "peerDependencies": {
-    "dotenv": "^16.4.5",
-    "@langchain/community": "^0.2.22"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "@types/node": "^18"
