--- a/packages/llm/package.json
+++ b/packages/llm/package.json
@@ -13,8 +13,8 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +29,5 @@
   "peerDependencies": {
     "dotenv": "^16.4.5"
   },
-  "devDependencies": {
-    "@types/node": "^18"
-  }
+  "devDependencies": {}
 }
