--- a/packages/prompts/package.json
+++ b/packages/prompts/package.json
@@ -13,14 +13,15 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf dist",
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {},
   "peerDependencies": {
+    "@langchain/core": "^0.2.18",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
