--- a/packages/tools/tsconfig.json
+++ b/packages/tools/tsconfig.json
@@ -2,18 +2,21 @@
   "compilerOptions": {
     "incremental": true,
     "target": "ESNext",
-    "module": "ESNext",
+    "module": "NodeNext",
     "declaration": true,
     "esModuleInterop": true,
     "outDir": "./dist/esm",
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Bundler",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@ai-citizen/*": ["../*"],
+      "@ai-citizens/graph": ["../graph/dist/esm"],
+      "@ai-citizens/utils": ["../utils/dist/esm"],
+      "@ai-citizens/prompts": ["../prompts/dist/esm"]
     }
   },
   "include": ["src/**/*"],
