--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -13,7 +13,7 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@ai-citizen/*": ["../*"]
     }
   },
   "include": ["src/**/*"],
