--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -24,8 +24,10 @@
   "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "typescript": "^5.5.4",
-    "@types/node": "^18"
+    "@types/node": "^18",
+    "typescript": "^5.5.4"
   },
-  "devDependencies": {}
+  "dependencies": {
+    "fast-xml-parser": "^4.4.0"
+  }
 }
