--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@electric-sql/react": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
