--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,17 +36,22 @@
     "@ai-citizens/prompts": "workspace:*",
     "@ai-citizens/tools": "workspace:*",
     "@ai-citizens/utils": "workspace:*",
+    "@electric-sql/react": "^0.2.1",
     "@oclif/core": "^4.0.17",
     "@oclif/plugin-help": "^6",
     "@oclif/plugin-plugins": "^5",
     "clipboardy": "^4.0.0",
     "dotenv": "^16.4.5",
     "fast-xml-parser": "^4.4.0",
-    "inquirer": "^9.2.23"
+    "ink": "^5.0.1",
+    "inquirer": "^9.2.23",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
     "@types/node": "^18",
+    "@types/react": "^18.3.3",
+    "ava": "^6.1.3",
     "shx": "^0.3.3",
     "ts-node": "^10.9.2"
   },
