--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "NodeNext",
     "outDir": "dist",
     "rootDir": "./src",
+    "jsx": "react-jsx",
     "composite": true,
     "strict": true,
     "target": "es2022",
