--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -14,24 +14,38 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
+    "test": "ava"
+  },
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp"
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@langchain/langgraph": "^0.0.31",
     "@langchain/core": "^0.2.18",
-    "uuid": "^10.0.0"
+    "@langchain/langgraph": "^0.0.34",
+    "pg": "^8.12.0",
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "@ai-citizens/llm": "workspace:*",
     "@ai-citizens/prompts": "workspace:*",
-    "@ai-citizens/utils": "workspace:*",
     "@ai-citizens/tools": "workspace:*",
+    "@ai-citizens/utils": "workspace:*",
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/node": "^18"
+    "@types/node": "^18",
+    "@types/pg": "^8.11.6",
+    "ava": "^6.1.3",
+    "tsimp": "^2.0.11"
   }
 }
