--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -14,11 +14,20 @@
   },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp"
+    ]
+  },
   "dependencies": {
     "@ai-citizens/llm": "workspace:*",
     "@ai-citizens/prompts": "workspace:*",
@@ -26,16 +35,22 @@
     "@langchain/community": "^0.2.22",
     "@langchain/core": "^0.2.18",
     "@langchain/openai": "^0.2.5",
+    "canvas": "^2.11.2",
+    "d3": "^7.9.0",
     "pg": "^8.12.0",
     "uuid": "^10.0.0",
     "youtube-transcript": "^1.2.1",
-    "youtubei.js": "^10.0.0"
+    "youtubei.js": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "peerDependencies": {
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^18",
-    "@types/pg": "^8.11.6"
+    "@types/pg": "^8.11.6",
+    "ava": "^6.1.3",
+    "tsimp": "^2.0.11"
   }
 }
