--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -16,9 +16,17 @@
       "require": "./dist/cjs/process/index.js"
     }
   },
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp"
+    ]
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
@@ -30,5 +38,9 @@
   "dependencies": {
     "fast-xml-parser": "^4.4.0",
     "minimatch": "^10.0.1"
+  },
+  "devDependencies": {
+    "ava": "^6.1.3",
+    "tsimp": "^2.0.11"
   }
 }
