--- a/packages/llm/package.json
+++ b/packages/llm/package.json
@@ -12,9 +12,18 @@
       "require": "./dist/cjs/index.js"
     }
   },
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp"
+    ]
+  },
   "scripts": {
     "clean": "rimraf dist",
-    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json"
+    "build": "tsc -p tsconfig.json && tsc -p tsconfig.cjs.json",
+    "test": "ava"
   },
   "keywords": [],
   "author": "",
@@ -29,5 +38,8 @@
   "peerDependencies": {
     "dotenv": "^16.4.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "ava": "^6.1.3",
+    "tsimp": "^2.0.11"
+  }
 }
