--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -4,6 +4,15 @@
   "description": "",
   "author": "Josh Mabry",
   "type": "module",
+  "ava": {
+    "extensions": {
+      "ts": "module"
+    },
+    "nodeArguments": [
+      "--import=tsimp"
+      "ava": "^6.1.3",,
+    ]
+  },
   "scripts": {
     "build": "shx rm -rf dist && tsc -b",
     "lint": "eslint . --ext .ts",
@@ -52,6 +61,7 @@
     "@types/node": "^18",
     "@types/react": "^18.3.3",
     "ava": "^6.1.3",
+    "tsimp": "^2.0.11",
     "shx": "^0.3.3",
     "ts-node": "^10.9.2"
   },
