--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -30,7 +30,9 @@
   "license": "ISC",
   "dependencies": {
     "@langchain/core": "^0.2.18",
-    "@langchain/langgraph": "^0.0.34",
+    "@langchain/langgraph": "^0.0.31",
+    "@langchain/openai": "^0.2.5",
+    "langchain": "^0.2.16",
     "pg": "^8.12.0",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
