increase ava timeout

--- a/packages/graph/package.json
+++ b/packages/graph/package.json
@@ -23,7 +23,8 @@
     },
     "nodeArguments": [
       "--import=tsimp"
-    ]
+    ],
+    "timeout": "500s"
   },
   "keywords": [],
   "author": "",
