--- a/packages/tools/package.json
+++ b/packages/tools/package.json
@@ -26,7 +26,8 @@
     },
     "nodeArguments": [
       "--import=tsimp"
-    ]
+    ],
+    "timeout": "20s"
   },
   "dependencies": {
     "@ai-citizens/llm": "workspace:*",
@@ -36,8 +37,10 @@
     "@langchain/core": "^0.2.18",
     "@langchain/openai": "^0.2.5",
     "canvas": "^2.11.2",
+    "crawlee": "^3.11.2",
     "d3": "^7.9.0",
     "pg": "^8.12.0",
+    "playwright": "^1.46.1",
     "uuid": "^10.0.0",
     "youtube-transcript": "^1.2.1",
     "youtubei.js": "^10.0.0",
